#126 chore: created openapi ResourceOrigin
