# applications/workspaces/server/workspaces/models/__init__.py
@@ -21,6 +21,7 @@ from workspaces.models.repository_resource_base_all_of import RepositoryResource
 from workspaces.models.repository_resource_node import RepositoryResourceNode
 from workspaces.models.repository_type import RepositoryType
 from workspaces.models.resource_base import ResourceBase
+from workspaces.models.resource_origin import ResourceOrigin
 from workspaces.models.resource_status import ResourceStatus
 from workspaces.models.resource_type import ResourceType
 from workspaces.models.user import User
