# applications/workspaces/server/workspaces/openapi/openapi.yaml
@@ -290,9 +290,7 @@ paths:
                   type: integer
                 origin:
                   description: optional Resource where the WorkspaceResource is build from
-                  oneOf:
-                    - $ref: "#/components/schemas/RepositoryResource"
-                    - $ref: "#/components/schemas/DownloadResource"
+                  $ref: "#/components/schemas/ResourceOrigin"
       responses:
         201:
           description: Save successful.
@@ -1031,6 +1029,11 @@ components:
         - $ref: "#/components/schemas/FigshareRepositoryResource"
         - $ref: "#/components/schemas/DandiRepositoryResource"
         - $ref: "#/components/schemas/GITRepositoryResource"
+    ResourceOrigin:
+      description: optional Resource where the WorkspaceResource is build from
+      oneOf:
+        - $ref: "#/components/schemas/RepositoryResource"
+        - $ref: "#/components/schemas/DownloadResource"    
     RepositoryResourceNode:
       description: Tree node (files/folders) of a Repository tree
       type: object
